:lipstick: Added style change in component Button

--- a/src/components/Button/Button.module.css
+++ b/src/components/Button/Button.module.css
@@ -5,7 +5,8 @@
   cursor: pointer;
   padding: 16px 32px;
   letter-spacing: 1px;
-  background-color: #43f;
+  border-radius: 10px;
+  background-color: #c03fc1;
   text-transform: uppercase;
 }
 
